# marius-ne.github.io

./: .gitattributes  .gitignore  README.md  _config.yml  build.py  index.html  pyproject.toml
_code/html1/: .buildinfo  genindex.html  index.html  notebooks.html  search.html
_code/html2/: intro.html  markdown-notebooks.html  markdown.html  notebooks.html  searchindex.js
_data/: navigation.yml
_includes/: analytics.html  archive-single-cv.html  archive-single-talk-cv.html  archive-single-talk.html  archive-single.html  author-profile.html  breadcrumbs.html  browser-upgrade.html  category-list.html  comment.html  comments.html  cv-template.html  footer.html  head.html  masthead.html  page__hero.html  page__taxonomy.html  paginator.html  post_pagination.html  read-time.html  scripts.html  seo.html  sidebar.html  social-share.html  tag-list.html
_includes/analytics-providers/: custom.html  google-analytics-4.html  google-universal.html  google.html
_includes/comments-providers/: custom.html  discourse.html  (+5 more)
_layouts/: archive-taxonomy.html  archive.html  compress.html  cv-layout.html  default.html  jupyterBook.html  single.html  splash.html  talk.html
_pages/: 180_rmse_cloud.html  about.md  category-archive.html  code.html  codeMaster.html  collection-archive.html  cv.html  cv.md  page-archive.html  portfolio.md  publications.html  tag-archive.html  talkmap.html  talks.html  teaching.html  year-archive.html  year-archive.md
_portfolio/: portfolio-2.html
_posts/: vbndatasets.md
_publications/: 2024-02-17-paper-title-number-4.md
talkmap/: map.html
(+23 files in other folders)
